--- a/Areas/Admin/Views/_ViewImpotrs.cshtml
+++ b/Areas/Admin/Views/_ViewImpotrs.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using VartanMVCv2.Domain.Entities
+@using VartanMVCv2.ViewModels
 @model VartanMVCv2.Models.LoginViewModel
