--- a/Areas/Admin/Views/Shared/AdminCssPartial.cshtml
+++ b/Areas/Admin/Views/Shared/AdminCssPartial.cshtml
@@ -4,3 +4,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="~/css/custom.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+<link rel="stylesheet" href="~/css/popUpStyle.css" type="text/css"/>
