--- a/Areas/Admin/Views/Shared/AdminScriptsPartial.cshtml
+++ b/Areas/Admin/Views/Shared/AdminScriptsPartial.cshtml
@@ -1,3 +1,14 @@
-﻿<!-- Javascript files-->
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!-- Javascript files-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@@simondmc/popup-js@1.4.2/popup.min.js"></script>
+<script src="~/js/jquery.autocomplete.min.js" asp-append-version="true"></script>
+<script src="~/js/app.min.js" asp-append-version="true"></script>
+<script src="~/js/customAdmin.js" asp-append-version="true"></script>
+<script src="~/js/adminNavPanelHiderScript.js" asp-append-version="true"></script>
+<script src="~/js/tableInit.js" asp-append-version="true"></script>
+
+
+<script src="~/js/adminPopUpScript.js" asp-append-version="true"></script>
