--- a/Views/Home/ServicesByID.cshtml
+++ b/Views/Home/ServicesByID.cshtml
@@ -32,8 +32,6 @@
                 }
             </div>
             <div class="price_section">
-                <h1 class="price_h">Стоимость услуги</h1>
-                <h1 class="price_num">1445 рублей кв.м</h1>
                 <div class="read_bt"><a href="#">Получить пример сметы</a> </div>
                 <p class="micro_p">*стоимость на комплексные услуги складывается из множества факторов и меняется время от времени, пожалуйста, уточняйте цены по телефону.</p>             
             </div>
@@ -95,7 +93,7 @@
             <div class="col-md-6">
                 <h1 class="purchase_text">Специальное предожение</h1>
                 <p class="lorem_text">Оставьте заявку сейчас, и получите 3% скидку на стройматериалы</p>
-                <div class="read_bt"><a href="@Url.Action("Contact","Home")">Оставить заявку</a> </div>
+                <div class="read_bt" id="read_bt_final"><a href="@Url.Action("Contact","Home")">Оставить заявку</a> </div>
             </div>
             <div class="col-md-6">
                 <div class="image_1"><img src="~/images/smiley-woman-transformed.png"></div>
