--- a/Areas/Admin/Views/Owner/AddWorkServices.cshtml
+++ b/Areas/Admin/Views/Owner/AddWorkServices.cshtml
@@ -1,36 +1,127 @@
-﻿<div class="page-announce valign-wrapper"><a href="#" data-activates="slide-out" class="button-collapse valign hide-on-large-only"><i class="material-icons">menu</i></a><h1 class="page-announce-text valign">Добавить услугу</h1></div>
-<div class="container">
-    <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <h5>
-                    Type of announcement</h5>
-                    <p>
-                        <input type="radio" name="type" value="success" id="success" />
-                        <label for="success">Success</label>
-                    </p>
-                    <p>
-                        <input type="radio" name="type" value="warning" id="warning" />
-                        <label for="warning">Warning</label>
-                    </p>
-                    <p>
-                        <input type="radio" name="type" value="danger" id="danger" />
-                        <label for="danger">Danger</label>
-                    </p>
+﻿@model WorkServicesViewModel
+
+@{
+    var categoriesCount = 0;
+}
+
+<style>
+    .form_conteier {
+        margin: 5em;
+        background-color: #30a2ff85;
+        border-radius: 20px;
+        border-style: dotted;
+    }
+
+    form {
+        margin: 15px;
+    }
+
+    p2 {
+        display: block;
+        margin: 2em;
+    }
+
+    input[type="file"] {
+        border: double;
+        margin-left: 3em;
+    }
+
+    #CP_accept {
+        margin-left: 20em;
+        width: 20em;
+        height: 3em;
+    }
+
+    span {
+    }
+
+    label {
+        font-size: 22px;
+        color: black;
+    }
+</style>
+
+
+
+<div class="form_conteier">
+    <form asp-area="Admin" asp-controller="Owner" asp-action="AddWorkServices" method="post" enctype="multipart/form-data">
+        <p2>
+            <input type="hidden" name="categoriesCount" id="categoriesCount" value="@categoriesCount" />
+        </p2>      
+        <p2 class="validation_text">
+            <label>Заголовок</label>
+            <input class="text_input_form" autocomplete="off" placeholder="Заголовок" asp-for="@Model.workServicesExample!.Title" data-val-required="Это поле не должно быть пустым" />
+            <span asp-validation-for="@Model.workServicesExample!.Title" />
+        </p2>
+        <p2 class="validation_text">
+            <label>Описание</label>
+            <input class="text_input_form" autocomplete="off" placeholder="Описание" asp-for="@Model.workServicesExample!.Description" />
+            <span asp-validation-for="@Model.workServicesExample!.Description" />
+        </p2>
+        <p2 class="validation_text">
+            <label>Титульная картинка</label>
+            <input class="file_input_form" type="file" name="files" placeholder="Титульная картинка" accept=".jpg, .jpeg, .png" />
+        </p2>
+        <p2>
+            <div id="categories">
+                @for (int i = 0; i < categoriesCount; i++)
+        {
+                <div class="category">
+                    <p2 class="validation_text">
+                        <label>Название категории</label>
+                        <input class="text_input_form" autocomplete="off" placeholder="Наименование категории работ" asp-for="@Model.worksCategories![i].Title" data-val-required="Это поле не должно быть пустым" />
+                        <span asp-validation-for="@Model.worksCategories![i]!.Title" />
+                    </p2>
+                    <p2 class="validation_text">
+                        <label>Перечень работ</label>
+                            <textarea autocomplete="off" placeholder="Перечень работ" asp-for="@Model.worksNames![i]"></textarea>
+                    </p2>
+                    <p2>
+                            <button type="button" class="remove-category">Удалить категорию</button>
+                    </p2>
+                        
+                </div> 
+        }
             </div>
-            <div class="row">
-                <p>
-                    <input type="checkbox" name="apidisable" value="true" id="disableLogin" />
-                    <label for="disableLogin">Disable Login?</label>
-                </p>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input type="text" name="text" maxlength="200" />
-                    <label for="text">Message: </label>
-                </div>
-            </div>
-            <div class="center-align"><input class="btn btn-success" type="submit" value="Submit" /></div>
-        </form>
-    </div>
+        </p2>
+        <p2 class="validation_text">
+            <button type="button" id="add-category">Добавить категорию</button>
+        </p2>
+        <button name="acceptWorkServices" id="WS_accept" type="submit" value="Send">Добавить</button>
+    </form>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    $(function () {
+        var categoriesCount = parseInt($("#categoriesCount").val());
+        // Добавление новой категории
+        $('#add-category').click(function () {
+            var categoryHtml = '<div class="category">' +
+                '<p2 class="validation_text">' +
+                '<label>Название категории</label>' +
+                '<input class="text_input_form" autocomplete="off" placeholder="Наименование категории работ" asp-for="@@Model.worksCategories[' + categoriesCount + '].Title" data-val-required="Это поле не должно быть пустым" />' +
+                '<span asp-validation-for="@@Model.worksCategories[' + categoriesCount + '].Title" />' +
+                '</p2>' +
+                '<p2 class="validation_text">' +
+                '<label>Перечень работ</label>' +
+                '<textarea autocomplete="off" placeholder="Перечень работ" asp-for="@@Model.worksNames[' + categoriesCount + ']"></textarea>' +
+                '</p2>' +
+                '<p2>' +
+                '<button type="button" class="remove-category">Удалить категорию</button>' +
+                '</p2>' +
+                '</div>';
+            $('#categories').append(categoryHtml);
+            categoriesCount++;
+            $("#categoriesCount").val(categoriesCount);
+        });
+        // Удаление категории
+        $(document).on('click', '.remove-category', function () {
+            $(this).closest('.category').remove();
+            categoriesCount--;
+            $("#categoriesCount").val(categoriesCount);
+        });
+    });
+</script>
+
