--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -465,12 +465,17 @@ button {
     width: 60%;
     margin: 0 auto;
     text-align: center;
+    margin-top: 10px;
 }
 
 .read_bt {
     width: 100%;
     float: left;
-    margin-top: 10px;
+    
+}
+
+#read_bt_final {
+    margin-top: 150px;
 }
 
     .read_bt a {
@@ -1526,19 +1531,24 @@ textarea#comment::placeholder {
     margin: 5%;
     margin-left: 20%;
     margin-right: 20%;
-    background: #d3d3d3;
+    background: #e5c2806e;
     border-radius: 10px;
 }
 
 .price_h {
     display: flex;
     justify-content: center;
-    background: darkgray;
+    background: #5cb9e7;
     border-radius: 15px;
 }
 
 .price_num {
-
+    margin: 5px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    color: red;
+    font-size: 40px;
 }
 
 .micro_p {
@@ -1565,9 +1575,7 @@ textarea#comment::placeholder {
     width: 50%;
     height: fit-content;
     padding: 10px;
-    border: 4px solid #00adff;
     border-radius: 30px;
-    background-color: #fff;
     overflow: hidden;
 }
     .road_map:hover{
